--- a/src/UI components/Header/for mobile header interface/mobile header interface link/mobileHeaderInterfaceLink.css
+++ b/src/UI components/Header/for mobile header interface/mobile header interface link/mobileHeaderInterfaceLink.css
@@ -1,6 +1,7 @@
 .mobileHeaderInterfaceLink {
     p {
-        font-size: 30px;
+        font-size: 50px;
+        border-bottom: 2px solid var(--black-background-color);
         color: var(--black-background-color);
     }
 }
